@@ -1,7 +1,8 @@
 2011-05-11  NIIBE Yutaka  <gniibe@fsij.org>
 
-	* src/flash.c (keystore_pool): Remove.  Use &_keystore_pool.
+	* src/usb-icc.c (icc_thread): Remove.  Use chThdSelf ().
 
+	* src/flash.c (keystore_pool): Remove.  Use &_keystore_pool.
 	* src/ac.c (auth_status): Don't assign 0 as it's automatically
 	cleared.
 
